syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "SocialNetwork.Dialog.Grpc.V2";

package dialog.v2;

service GrpcDialogService {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

message SendMessageRequest {
  int64 senderId = 1;
  int64 recipientId = 2;
  string text = 3;
}

message SendMessageResponse {
  bool success = 1;
}

message GetMessagesRequest {
  int64 userId1 = 1;
  int64 userId2 = 2;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message Message {
  int64 from = 1;
  int64 to = 2;
  string text = 3;
  google.protobuf.Timestamp sentAt = 4;
}